First Draft done.

--- a/index.html
+++ b/index.html
@@ -3,16 +3,13 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
 		<title>DOFL National Website</title>
-
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
 		<link rel="stylesheet" href="dist/theme/white.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="plugin/highlight/monokai.css">
 	</head>
@@ -41,109 +38,87 @@
 				<section data-background-image="images/background.jpg" data-background-position="bottom center" data-background-size="cover">
 					<h2>2022/23 - Fixes</h2>
 					<ul>
-						<li>Fix embeds for City Managers.</li>
-						<li>Keep Unpublished cities off the site</li>
+						<li>Made the site PHP8 compatible 🎉</li>
+						<li>Fixed mobile view of restaurant filters</li>
 					</ul>
 				</section>
 
 				<section data-background-image="images/background.jpg" data-background-position="bottom center" data-background-size="cover">
 					<h2>2022/23 - Features</h2>
 					<p>
-						Indicate if a restaurant's donation includes alcohol.
+						Ability to remove alcohol information completely
 					</p>
 				</section>
 
 				<section data-background-image="images/background.jpg" data-background-position="bottom center" data-background-size="cover">
 					<h2>2022/23 - Features</h2>
-					<img src="images/booze.png" alt="">
-					<img src="images/booze2.png" alt="">
+					<img src="images/booze.png" alt="" style="max-width: 400px;">
 				</section>
 
 				<section data-background-image="images/background.jpg" data-background-position="bottom center" data-background-size="cover">
 					<h2>2022/23 - Features</h2>
 					<p>
-						Link the Donate nav item to the City's donate link.
+						Ability to rearrange the city page sections
 					</p>
 				</section>
 
 				<section data-background-image="images/background.jpg" data-background-position="bottom center" data-background-size="cover">
 					<h2>2022/23 - Features</h2>
-					<img src="images/donation-link1.png" alt="" style="max-width: 340px;">
-					<img src="images/donation-link2.png" alt="" style="max-width: 800px;">
+					<img src="images/sections.png" alt="" style="max-width: 600px;">
+				</section>
+
+				<section data-background-image="images/background.jpg" data-background-position="bottom center" data-background-size="cover">
+					<h2>2022/23 - Features</h2>
+					<img src="images/sections2.png" alt="" style="max-width: 600px;">
 				</section>
 
 				<section data-background-image="images/background.jpg" data-background-position="bottom center" data-background-size="cover">
 					<h2>2022/23 - Features</h2>
 					<p>
-						Build better-designed restaurant modal.
+						Add Ability to show social feeds on city pages.
 					</p>
 				</section>
 
 				<section data-background-image="images/background.jpg" data-background-position="bottom center" data-background-size="cover">
 					<h2>2022/23 - Features</h2>
-					<img src="images/modal.png" alt="" style="max-width: 600px;">
+					<img src="images/womp.png" alt="" style="max-width: 700px;">
 				</section>
 
 				<section data-background-image="images/background.jpg" data-background-position="bottom center" data-background-size="cover">
 					<h2>2022/23 - Features</h2>
 					<p>
-						Add ability to hold multi-date events.
+						Turn the About page into a real page.
 					</p>
 				</section>
 
 				<section data-background-image="images/background.jpg" data-background-position="bottom center" data-background-size="cover">
 					<h2>2022/23 - Features</h2>
-					<img src="images/dates.png" alt="">
-				</section>
-
-				<section data-background-image="images/background.jpg" data-background-position="bottom center" data-background-size="cover">
-					<h2>2022/23 - Features</h2>
-					<img src="images/dates2.png" alt="">
+					<img src="images/about.png" alt="" style="max-width: 800px;">
 				</section>
 
 				<section data-background-image="images/background.jpg" data-background-position="bottom center" data-background-size="cover">
 					<h2>2022/23 - Features</h2>
 					<p>
-						Add the ability to show the donation amount as a % of sales.
+						Create a multi-purpose contact form for sponsors, restaurants, etc.
 					</p>
 				</section>
 
 				<section data-background-image="images/background.jpg" data-background-position="bottom center" data-background-size="cover">
-					<h2>2022/23 - Features</h2>
-					<img src="images/donation.png" alt="">
-				</section>
-
-				<section data-background-image="images/background.jpg" data-background-position="bottom center" data-background-size="cover">
-					<h2>2022/23 - Features</h2>
-					<img src="images/donation2.png" alt="">
-				</section>
-
-				<section data-background-image="images/background.jpg" data-background-position="bottom center" data-background-size="cover">
-					<h2>2022/23 - Features</h2>
+					<h2>2022/23 - Work in Progress</h2>
 					<p>
-						Add the ability to adjust the presentation of sponsors
+						Add new blog posts highlighting cities
 					</p>
 				</section>
 
 				<section data-background-image="images/background.jpg" data-background-position="bottom center" data-background-size="cover">
-					<h2>2022/23 - Features</h2>
-					<img src="images/sponsors.png" alt="">
-				</section>
-
-				<section data-background-image="images/background.jpg" data-background-position="bottom center" data-background-size="cover">
-					<h2>2022/23 - Features</h2>
+					<h2>2022/23 - Work in Progress</h2>
 					<p>
-						Add the ability to hide restaurant list columns.
+						Add ability to highlight organizations on the homepage.
 					</p>
 				</section>
 
 				<section data-background-image="images/background.jpg" data-background-position="bottom center" data-background-size="cover">
-					<h2>2022/23 - Features</h2>
-					<img src="images/columns.png" alt="">
-				</section>
-
-				<section data-background-image="images/background.jpg" data-background-position="bottom center" data-background-size="cover">
-					<h1>2023/24 - Your Questions</h1>
+					<h1>Your Questions</h1>
 					<p>
 						Your submitted questions
 					</p>
@@ -152,14 +127,14 @@
 				<section data-background-image="images/background.jpg" data-background-position="bottom center" data-background-size="cover">
 					<h1>Your Questions</h1>
 					<p>
-						What are some strategies to leverage the DOFL website to help promote your participating restaurants?
+						Can we add more social links, like TikTok?
 					</p>
 				</section>
 
 				<section data-background-image="images/background.jpg" data-background-position="bottom center" data-background-size="cover">
 					<h1>Your Questions</h1>
 					<p>
-						I’ve noticed many organizations have a website for their Dining Out For Life event exclusive from the national website and their org’s website. Does this help bring more diner and/restaurant participation?
+						
 					</p>
 				</section>
 
