--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 				</section>
 
 				<section data-background-image="images/background.jpg" data-background-position="bottom center" data-background-size="cover">
-					<h2>2022/23 - Features</h2>
+					<h2>2022/23 - Work in Progress</h2>
 					<p>
-						Create a multi-purpose contact form for sponsors, restaurants, etc.
+						Create a multi-purpose contact form for sponsors, restaurants, volunteers etc.
 					</p>
 				</section>
 
